--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@babel/preset-env": "^7.8.3",
     "body": "^5.1.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "parser": "^0.1.4",
     "pug": "^2.0.4"
   },
